lib/flux/apps/servarr/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
spec:
  parentRefs: ${gateway_parent_refs}
  hostnames:
    - ${domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: ${path}/
      backendRefs:
        - name: qbittorrent
          port: 80
    # Flood only works under its base URI with the trailing slash.
    - matches:
        - path:
            type: Exact
            value: ${path}
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: ${path}/
            statusCode: 302
